# internal/ports/http/appointment.go
@@ -1,0 +1,15 @@
+package httpport
+
+import "github.com/gin-gonic/gin"
+
+func (h handler) listAppointments(c *gin.Context) {
+
+}
+
+func (h handler) createApointment(c *gin.Context) {
+
+}
+
+func (h handler) removeAppointment(c *gin.Context) {
+
+}
