# internal/ports/http/calendar.go
@@ -5,7 +5,3 @@ import "github.com/gin-gonic/gin"
 func (h handler) getCalendar(c *gin.Context) {
 
 }
-
-func (h handler) listAppointments(c *gin.Context) {
-
-}
