# internal/ports/http/handler.go
@@ -14,20 +14,22 @@ func NewHandler() http.Handler {
 	router.Use(gin.Logger(), gin.Recovery())
 	api := router.Group("/api")
 
-	// Public resources.
 	api.GET("/calendar/:id", h.getCalendar)
+
+	// Auth
 	api.POST("/doctor/signup", h.signupDoctor)
 	api.POST("/doctor/signin", h.signinDoctor)
 	api.POST("/patient/signup", h.signupPatient)
 	api.POST("/patient/signin", h.signinPatient)
 
-	// Private resources.
+	// Slot
 	api.POST("/slot", h.addSlots)
-	api.PUT("/slot/:id/availability", h.changeSlotAvailability)
-	api.PUT("/slot/:id/book", h.bookApointment)
-	api.PUT("/slot/:id/cancellation", h.cancelAppointment)
+	api.PUT("/slot/:id/availability", h.updateSlotAvailability)
 
+	// Appointment
 	api.GET("/appointment", h.listAppointments)
+	api.POST("/appointment", h.createApointment)
+	api.DELETE("/appointment/:id", h.removeAppointment)
 	return router
 }
 
